tests/baselines/reference/constructorOverloads5.errors.txt
==== tests/cases/compiler/constructorOverloads5.ts (1 errors) ====
     interface IArguments {}
    
     declare module M {
        export function RegExp(pattern: string): RegExp;
        export function RegExp(pattern: string, flags: string): RegExp;
        export class RegExp {
                     ~~~~~~
!!! constructorOverloads5.ts(6,18): error TS2000: Duplicate identifier 'RegExp'. Additional locations:
!!! 	constructorOverloads5.ts(4,5)
            constructor(pattern: string);
            constructor(pattern: string, flags: string);
            exec(string: string): string[];
            test(string: string): boolean;
            source: string;
            global: boolean;
            ignoreCase: boolean;
            multiline: boolean;
            lastIndex: boolean;
        }
    }
    